--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,9 @@
         <button class="menu"><img src="images/hamburger.svg" alt="Menu"></button>
         <h1 class="logo">Web <strong>Starter Kit</strong></h1>
         <section class="app-bar-actions">
+          <button>You</button>
+          <button>AND</button>
+          <button>I</button>
         <!-- Put App Bar Buttons Here -->
         <!-- e.g <button><i class="icon icon-star"></i></button> -->
         </section>
