--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Fullpage</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
 <div class="sections">
