搭个大概框架

--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="css/app.css"/>
 </head>
 <body>
-<div class="sections">
+<div id="sectionContent" class="section-content">
     <div class="section">1</div>
     <div class="section">2</div>
     <div class="section">3</div>
 </div>
+<script src="js/fullpage.js"></script>
 </body>
 </html>
