--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="zh-cn">
 <head>
-    <meta charset="UTF-8">
-    <title>Fullpage</title>
-    <link rel="stylesheet" href="css/app.css"/>
+  <meta charset="UTF-8">
+  <title>Fullpage</title>
+  <link rel="stylesheet" href="css/app.css"/>
+  <script>
+
+  </script>
 </head>
 <body>
 <div id="sectionContent" class="section-content">
-    <div class="section">1</div>
-    <div class="section">2</div>
-    <div class="section">3</div>
+  <div class="section">1</div>
+  <div class="section">2</div>
+  <div class="section">3</div>
 </div>
 <script src="js/fullpage.js"></script>
 </body>
