--- a/src/index.html
+++ b/src/index.html
@@ -3,19 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <title>Fullpage</title>
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="css/app.css"/>
-
 </head>
 <body>
 <div id="sectionContent" class="section-content">
-  <div class="section">1</div>
+  <div class="section">
+    <div class="slide-wrap">
+      <div class="slide">1</div>
+      <div class="slide">2</div>
+      <div class="slide">3</div>
+      <div class="slide">4</div>
+      <div class="slide">5</div>
+    </div>
+  </div>
   <div class="section">2</div>
   <div class="section">3</div>
 </div>
 <script src="js/fullpage.js"></script>
 <script>
   window.onload = function () {
-    fullpage.init('#sectionContent');
+    fullpage.initEle('#sectionContent');
   }
 </script>
 </body>
