添加功能： * 自动播放 * 循环滚动

--- a/src/index.html
+++ b/src/index.html
@@ -31,17 +31,18 @@
 <script>
   window.onload = function () {
     fullpage.init('#sectionContent', {
+//      autoScroll: true,
       beforeLeave: function (leaveIndex, nowIndex) {
         if (nowIndex === 2) {
-          console.log('You will leave page 2')
+//          console.log('You will leave page 2')
         }
-        console.log(this, leaveIndex, nowIndex)
+//        console.log(this, leaveIndex, nowIndex)
       },
       afterLoad: function (afterIndex) {
         if (afterIndex === 2) {
-          console.log('You will go to page 2')
+//          console.log('You will go to page 2')
         }
-        console.log(this, afterIndex)
+//        console.log(this, afterIndex)
       }
     });
   }
