--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
         <li>引入 css 文件 fullpage.css（如果你使用less，则可以在less主文件中引入fullpage.less）</li>
         <li>按照下面格式书写html代码（其中 id 为 sectionContent 的为包裹层，你可以自定义修改其id）</li>
       </ul>
-      <img src="../images/code.png" alt="code"/>
+      <img src="images/code.png" alt="code"/>
 
       <h2><a href="https://github.com/kisnows/fullpage-light.js" target="_blank">详细使用方法请点击</a></h2>
     </div>
