--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <link rel="stylesheet" href="css/app.css"/>
+  <link rel="stylesheet" href="./css/app.css"/>
 </head>
 <body>
 <div id="sectionContent" class="section-content">
@@ -81,7 +81,7 @@
     </div>
   </div>
 </div>
-<script src="js/fullPage.js"></script>
-<script src="js/index.js"></script>
+<script src="./js/fullPage.js"></script>
+<script src="./js/index.js"></script>
 </body>
 </html>
