添加导航按钮控制；页面激活时添加‘active'的class

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <link rel="stylesheet" href="./css/app.css"/>
 </head>
 <body>
-<div id="sectionContent" class="section-content">
-  <div id="distribution" class="section distribution">
-    <div class="slide-wrap">
-      <div class="slide">Slide1</div>
-      <div class="slide">Slide2</div>
-      <div class="slide">Slide3</div>
+<div id="sectionContent" class="fp-section-content">
+  <div id="distribution" class="fp-section distribution">
+    <div class="fp-slide-wrap">
+      <div class="fp-slide">Slide1</div>
+      <div class="fp-slide">Slide2</div>
+      <div class="fp-slide">Slide3</div>
     </div>
     <div class="box">
       <div class="triangle"></div>
@@ -46,7 +46,7 @@
     </div>
   </div>
   <!--class 的顺序不能更改！！！-->
-  <div class="section variation">
+  <div class="fp-section variation">
     <div class="split-line">使用方法</div>
     <div class="des">
       <ul class="ht-user">
@@ -59,7 +59,7 @@
       <h2><a href="https://github.com/kisnows/fullpage-light.js" target="_blank">详细使用方法请点击</a></h2>
     </div>
   </div>
-  <div class="section keywords">
+  <div class="fp-section keywords">
     <div class="wrap">
       <div class="split-line">给我意见</div>
       <a class="balloon balloon-pink">嘻
