--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,6 @@
     </div>
   </div>
 </div>
-<script src="./js/fullpage.js"></script>
-<script src="./js/index.js"></script>
+<script src="../dist/app.js"></script>
 </body>
 </html>
