--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,7 @@
     </div>
   </div>
 </div>
-<script src="../dist/app.js"></script>
+<script src="./js/fullpage.js"></script>
+<script src="./js/index.js"></script>
 </body>
 </html>
