--- a/demo/demo01/index.html
+++ b/demo/demo01/index.html
@@ -8,6 +8,7 @@
         content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="stylesheet" href="../../src/fullpage.css">
   <link rel="stylesheet" href="./css/app.css"/>
 </head>
 <body>
